[gd_scene load_steps=4 format=3 uid="uid://bisapr5qhijgk"]

[ext_resource type="Script" path="res://actors/enemies/enemy.gd" id="1_dsokq"]
[ext_resource type="PackedScene" uid="uid://buimfmihej7f" path="res://objects/hitbox/hitbox.tscn" id="2_nf8ex"]

[sub_resource type="SphereShape3D" id="SphereShape3D_qbb77"]

[node name="EnemyTemplate" type="CharacterBody3D" groups=["Enemy"]]
script = ExtResource("1_dsokq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]

[node name="Hitbox" parent="." instance=ExtResource("2_nf8ex")]

[node name="EyesMarker" type="Marker3D" parent="."]

[node name="AttackHitArea" type="Area3D" parent="."]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="Timers" type="Node" parent="."]

[node name="IdleTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true
autostart = true

[node name="PatrolTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="DisappearAfterDeathTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="SearchTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="VisionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="VisionArea"]
shape = SubResource("SphereShape3D_qbb77")

[connection signal="timeout" from="Timers/IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="Timers/PatrolTimer" to="." method="_on_patrol_timer_timeout"]
[connection signal="timeout" from="Timers/DisappearAfterDeathTimer" to="." method="_on_disappear_after_death_timer_timeout"]
[connection signal="timeout" from="Timers/SearchTimer" to="." method="_on_search_timer_timeout"]
[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_exited" from="VisionArea" to="." method="_on_vision_area_body_exited"]
